# LLM4MTL-2.0

./: .gitignore  CITATION.cff  README.md
pipeline/: pyproject.toml
pipeline/src/llm4mtl/: __init__.py  conventions.py  paths.py  stage_contract.py
pipeline/src/llm4mtl/evaluation/: __init__.py  experiment_aggregation.py  experiment_significance.py
pipeline/src/llm4mtl/experiment_runner/: README.md  __init__.py  __main__.py  cli.py  config.py  matrix.py  orchestrator.py
pipeline/src/llm4mtl/experiment_store/: __init__.py  models.py
pipeline/src/llm4mtl/external_tools/: __init__.py
pipeline/src/llm4mtl/prompt_assembly/: __init__.py  build_task_prompts.py  builder.py  cli.py  injection.py
pipeline/src/llm4mtl/run_store/: __init__.py  events.py  manifest.py  models.py  stages.py
pipeline/src/llm4mtl/semantic_tests/: README.md  __init__.py
pipeline/src/llm4mtl/serialization/: __init__.py  csv_exports.py  json_io.py
pipeline/src/llm4mtl/stage_service/: __init__.py  api_models.py  app.py
pipeline/src/llm4mtl/task_contracts/: __init__.py  build_task_model_contracts.py  enforcement.py  loader.py  render.py
pipeline/src/llm4mtl/transformation_execution/: README.md  __init__.py  artifacts.py  cli.py  models.py  (+5 more)
pipeline/stage_service/: Dockerfile  README.md  docker-compose.yml
pipeline/tests/: test_architecture_paths.py  test_experiment_aggregation.py  test_experiment_matrix.py  test_experiment_runner.py  test_experiment_store.py  test_reference_promotion.py  test_run_store.py  test_stage_contract.py  test_stage_service.py  test_transformation_validation.py
(+1107 files in other folders)
